Improving labels and using data.service.ts for experience, education and proficiency

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,12 +1,12 @@
 {
-  "Header.Item1": "About Me",
-  "Header.Item2": "Education",
-  "Header.Item3": "Experience",
-  "Header.Item4": "Proficiency",
-  "Header.Item5": "Contact",
-  "Header.Item6": "Contact",
-  "Header.cvBtn": "Resume",
-  "Header.cvName": "CV_Marcel_Morais_Luna.pdf",
+  "header.item1": "About Me",
+  "header.item2": "Education",
+  "header.iem3": "Experience",
+  "header.item4": "Proficiency",
+  "header.item5": "Contact",
+  "header.item6": "Contact",
+  "header.cv-btn": "Resume",
+  "header.cv-name": "CV_Marcel_Morais_Luna.pdf",
 
   "banner.pre-title": "Hello! My name is",
   "banner.description": "I have more then <span class='underline'>13 years of experience</span> in IT with a Bachelor's Degree in Computer Science and specialization in software engineer but I'm self-taught and like to apply new technologies when they are mature enough and it's the best fit for the project.",
