--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -255,6 +255,9 @@
 
   "label.email": "Enter your e-mail",
   "label.name": "Enter your name",
-  "label.message": "Enter your message"
+  "label.message": "Enter your message",
+
+  "label.success" : "Your message was sent with success. I'll contact you as soon as I read it.",
+  "label.failed" : "Unfortunately, we had a problem sending your message. Please try again. If the error persists, please let me know directly by email (marcel@marcelluna.com)"
 
 }
