--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,7 +1,7 @@
 {
   "header.item1": "About Me",
   "header.item2": "Education",
-  "header.iem3": "Experience",
+  "header.item3": "Experience",
   "header.item4": "Proficiency",
   "header.item5": "Contact",
   "header.item6": "Contact",
