--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -1,7 +1,7 @@
 {
   "header.item1": "Sobre mim",
   "header.item2": "Educa\u00e7\u00e3o",
-  "header.iem3": "Experi\u00eancia",
+  "header.item3": "Experi\u00eancia",
   "header.item4": "Profici\u00eancia",
   "header.item5": "Contato",
   "header.item6": "Contato",
@@ -135,10 +135,10 @@
   "education.01.description": "Graduado desde 2006, pela Faculdade de Tecnologia e Ciências de Feira de Santana - Bahia",
   "education.02.title": "Engenharia de Software Lato Sensu",
   "education.02.date": "Janeiro de 2012 - Jun de 2014",
-  "education.02.description": "Concluiu em 2014, a especialização em Engenharia de Software pela Universidade Ruy Barbosa.",
+  "education.02.description": "Concluído em 2014, a especialização em Engenharia de Software pela Universidade Ruy Barbosa.",
   "education.03.title": "MBA em Gerenciamento de Projetos",
   "education.03.date": "Maio de 2015 - Julho de 2016",
-  "education.03.description": "Curso não concluído de Graduação em Administração de Empresas pela Universidade Ruy Barbosa, em Salvador Bahia.",
+  "education.03.description": "Curso não concluído de MBA em Administração de Empresas pela Universidade Ruy Barbosa, em Salvador Bahia.",
   "FeatureProjects.Title": "Profici\u00eancia",
   "OtherProjects.Title": "More Projects",
   "OtherProjects.Projects": [
@@ -246,8 +246,8 @@
   "label.proficiency.linux": "Linux",
   "label.proficiency.macos": "MacOS",
   "label.proficiency.cisco": "Cisco",
-  "label.proficiency.extreme": "Extremo",
-  "label.proficiency.juniper": "Zimbro",
+  "label.proficiency.extreme": "Extreme",
+  "label.proficiency.juniper": "Juniper",
   "label.proficiency.d-link": "D-Link",
   "label.proficiency.portuguese": "Português (Nativo)",
   "label.proficiency.english": "Inglês",
