Logica principal de loader realizada

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -5,6 +5,7 @@
   "Header.Item4": "Contact",
   "Header.cvBtn": "Resume",
   "Header.cvName": "CV_Jose_Hernandez_Spanish.pdf",
+  "Loading": "Loading...",
 
   "Banner.Pretitle": "Hello! My name is",
   "Banner.Description": "I have <span class='underline'>8 years of experience</span> developing systems, interfaces, bots, and technological solutions to make the web a better place. I am dedicated to writing and refactoring clean, reusable, and scalable code in <span class='underline'>Angular</span> and <span class='underline'>Laravel</span>, applying good practices and development standards.",
